syntax = "proto3";

package packageservice;

message RequestArguments {
    string method = 1;
    string params = 2;
}

message ExpectedResponse {
    string type = 1;
    string data = 2;
}

service Services {
    rpc request (RequestArguments) returns (Response);
    rpc isConnected () returns (Response);
}
